...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todo_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/todo_item_finished_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:id="@+id/name_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/todo_item_finished_checkbox"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.Datetime.Body"
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/tag_display"
            app:layout_constraintStart_toEndOf="@id/todo_item_finished_checkbox"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <TextView
            android:id="@+id/tag_display"
            android:layout_width="0dp"
...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tag_display">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                app:layout_constraintStart_toStartOf="@id/notes_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/time_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_btn"
                app:srcCompat="@drawable/ic_access_time_24dp" />

            <ImageButton
                android:id="@+id/notes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:contentDescription="@string/date_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/notes_btn"
                app:srcCompat="@drawable/ic_date_range_24dp" />

            <ImageButton
                android:id="@+id/tag_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/tag_button_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/time_btn"
                app:srcCompat="@drawable/ic_outline_label_24" />

            <ImageButton
                android:id="@+id/reschedule_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/reschedule"
                android:src="@drawable/ic_more_vert_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/notes_text"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginBottom="@dimen/dp_6"
                android:autofillHints="@string/this_todo_is_about"
                android:ems="10"
...
