...
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="6dp"
            android:key="@id/top_app_bar"
...
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_item_spacing"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/colorAccent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/add_button_dimen"
        android:src="@drawable/ic_add" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/recycler_view_padding"
        android:paddingTop="@dimen/recycler_view_padding"
        android:paddingBottom="@dimen/recycler_view_padding"
...
