...
    <string name="app_name">WhatDo</string>
    <string name="app_bar_title">WhatDo ~ task tracker</string>
    <string name="floating_action_button">FAB to create to-do</string>
    <string name="time_picker_placeholder">Set Time: TIME_PICKER</string>
    <string name="date_picker_placeholder">Set Date: DATE_PICKER</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="text_whitespace">"      "</string>
    <string name="placeholder_text">placeholder text</string>
    <string name="add_task_hint">Add a task</string>
    <string name="notes">Notes</string>
    <string name="date_button">Date button</string>
    <string name="time_button">Time button</string>
...
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="todo_reoccurs">todo reoccurs</string>
    <string name="all_upcoming">all upcoming</string>
    <string name="tag_button_desc">Tag Button</string>
    <string name="tag_display_desc">tag display</string>
    <string name="add_new_tag_title">Add New Tag</string>
    <string name="close_tag_dialog_desc">close tag dialog</string>
    <string name="add_tag_hint">Add a Tag</string>
    <string name="single_day_menu">Single Day</string>
    <string name="date_range_menu">Date Range</string>
    <string name="all_upcoming_menu">All Upcoming</string>
    <string name="tag_filter_menu">Tag Filter</string>
    <string name="overflow_menu_icon">overflow menu icon</string>
    <string name="top_menu_icon_btn">top menu icon</string>
    <string name="show_all_tags">Show All Tags</string>
    <string name="add_new_tag">Add New Tag</string>
    <string name="tags_dialog_title">Tags</string>
    <string name="all_tags">All Tags</string>
    <string name="close_all_tags_dialog">close all tags dialog</string>
    <string name="search_tags_hint">Search Tags</string>
    <string name="tag_button_desc_create">Tag button</string>
...
